--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,32 @@
 .pokemonCardContainer {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
+	place-items: center;
 	gap: 20px;
 	margin-top: 20px;
+}
+
+.btn {
+	padding: 30px 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+}
+
+.btn button {
+	padding: 13px 32px;
+	background-color: palevioletred;
+	border: none;
+	box-shadow: 2px 8px 21px -2px #777777;
+	border-radius: 1vh;
+	color: white;
+	font-weight: 600;
+	cursor: pointer;
+	transition: all 0.5s;
+}
+
+.btn button:hover {
+	transform: translateY(5px);
+	box-shadow: none;
 }
